NetBSD Problem Report #50416
From www@NetBSD.org Mon Nov 9 13:07:54 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
by mollari.NetBSD.org (Postfix) with ESMTPS id 0B758A64EF
for <gnats-bugs@gnats.NetBSD.org>; Mon, 9 Nov 2015 13:07:54 +0000 (UTC)
Message-Id: <20151109130752.C42A1A6558@mollari.NetBSD.org>
Date: Mon, 9 Nov 2015 13:07:52 +0000 (UTC)
From: ganbold@gmail.com
Reply-To: ganbold@gmail.com
To: gnats-bugs@NetBSD.org
Subject: Odroid c1 ethernet problem (Receive side doesn't work when booting with cable connected)
X-Send-Pr-Version: www-1.0
>Number: 50416
>Category: port-evbarm
>Synopsis: Odroid c1 ethernet problem (Receive side doesn't work when booting with cable connected)
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: port-evbarm-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Mon Nov 09 13:10:00 +0000 2015
>Closed-Date: Sat May 14 20:01:02 +0000 2022
>Last-Modified: Sat May 14 20:01:02 +0000 2022
>Originator: Ganbold
>Release: NetBSD odroid-c1 7.99.21 NetBSD 7.99.21 (ODROID-C1.201511090430Z)
>Organization:
individual
>Environment:
odroid-c1# uname -an
NetBSD odroid-c1 7.99.21 NetBSD 7.99.21 (ODROID-C1.201511090430Z) #0: Mon Nov 9 06:27:11 UTC 2015 builds@b47.netbsd.org:/home/builds/ab/HEAD/evbarm-earmv7hf/201511090430Z-obj/home/source/ab/HEAD/src/sys/arch/evbarm/compile/ODROID-C1 evbarm
>Description:
Ethernet on Odroid C1 doesn't work when booting with cable connected. Receive side is not working.
However transmit works.
>How-To-Repeat:
Boot odroid c1 board with network cable connected and after login set up IP address and try to ping.
>Fix:
>Release-Note:
>Audit-Trail:
From: "Julian Coleman" <jdc@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/50416 CVS commit: src/sys/arch/arm/amlogic
Date: Wed, 17 Nov 2021 11:57:27 +0000
Module Name: src
Committed By: jdc
Date: Wed Nov 17 11:57:27 UTC 2021
Modified Files:
src/sys/arch/arm/amlogic: meson_dwmac.c
Log Message:
PR port-evbarm/50416
Also check the "reset_gpios", "reset-assert-us", and "reset-deassert-us"
properties for ethernet MAC reset information. Makes the built-in ethernet
work on Odroid C1 and Odroid C2 (with mesongxbb_pinctrl.c >= r1.3).
Based on a hint from Jared. C2 tested by Martin.
To generate a diff of this commit:
cvs rdiff -u -r1.12 -r1.13 src/sys/arch/arm/amlogic/meson_dwmac.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Julian Coleman" <jdc@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/50416 CVS commit: src/sys/arch/arm/amlogic
Date: Fri, 19 Nov 2021 07:04:27 +0000
Module Name: src
Committed By: jdc
Date: Fri Nov 19 07:04:27 UTC 2021
Modified Files:
src/sys/arch/arm/amlogic: meson_dwmac.c
Log Message:
PR port-evbarm/50416
Redo the previous change. The "snps,..." properties are on the ethernet
node and the "reset-..." properties are on the phy node. Handle this by
creating a separate reset routine for each case. Idea from Jared.
To generate a diff of this commit:
cvs rdiff -u -r1.13 -r1.14 src/sys/arch/arm/amlogic/meson_dwmac.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->feedback
State-Changed-By: jdc@NetBSD.org
State-Changed-When: Sat, 20 Nov 2021 14:43:50 +0000
State-Changed-Why:
Should be fixed now in -current. Please test if you can.
State-Changed-From-To: feedback->closed
State-Changed-By: jmcneill@NetBSD.org
State-Changed-When: Sat, 14 May 2022 20:01:02 +0000
State-Changed-Why:
Feedback timeout.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.